--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>power <textarea name="" id=""></textarea>ester</title>
+    <title>About us<textarea name="" id=""></textarea>ester</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -16,6 +16,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="blogs.html">Blog</a>
+            <a href="talks.html">Blog</a>
         </nav>
     </header>
     <main data-testid="main">
