--- a/talks.html
+++ b/talks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Tech Talks</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -16,7 +16,7 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="blogs.html">Blog</a>
-            <a href="talks.html">Blog</a>
+            <a href="talks.html">Talks</a>
         </nav>
     </header>
     <main>
