--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="blogs.html">Blog</a>
-            <a href="talks.html">Blog</a>
+            <a href="talks.html">Talks</a>
+            <a href="videos.html">YouTube</a>
         </nav>
     </header>
     <main data-testid="main">
