--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="contact.html">Contact</a>
             <a href="blogs.html">Blog</a>
             <a href="talks.html">Talks</a>
+            <a href="videos.html">YouTube</a>
         </nav>
     </header>
     <main data-testid="main">
