--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us<textarea name="" id=""></textarea>ester</title>
+    <title>Power Tester<textarea name="" id=""></textarea>ester</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
