--- a/blogs.html
+++ b/blogs.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Power Tester</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Our Blog</h1>
+        <h1>Power Tester</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
