add appointment scheduler

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,15 @@
     </header>
     <main>
         <section>
-            <h2>Get in Touch</h2>
+            <h2>Book an appointment</h2>
+            <p>
+                Want to book a meeting right away?
+                <a href="https://calendar.app.google/fsGMPxE77573mpgu9" target="_blank"
+                    style="text-decoration: none; color: #0073e6; font-weight: bold;">
+                    Click here to schedule an appointment.
+                </a>
+            </p>
+            <h2>OR drop a query with your contact details!</h2>
             <form id="contact-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -35,6 +43,7 @@
 
                 <button type="submit">Send</button>
             </form>
+            
         </section>
     </main>
     <footer>
