--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 style="border: 0" width="100%" height="600" title="Google Calendar Appointment Scheduling">
             </iframe>
             <!-- end Google Calendar Appointment Scheduling -->
-            <h2>Hourly Rate: Hire me as a full time consultant for your project.</h2>
+            <h2>Fixed duration: Hire me as a full time consultant at a hourly rate for a fixed duration for your project.</h2>
             <p>
                 If you want to hire me as a full time consultant on a hourly rate for a fixed duration, please use the contact form to drop me an email with your contact details and I will get back to you as soon as possible.
             </p>
             
-            <h2>Fixed Price: Or consult me for a short term fixed time assignment.</h2>
+            <h2>Fixed Price: Or Hire me for a specific time bound service at a fixed price.</h2>
             <ol>    
                 <li>
                     <h3>Test Trainings.</h3>
