update titles to show its dummy articles

--- a/blogs.html
+++ b/blogs.html
@@ -25,9 +25,9 @@
             <h2>Latest Posts</h2>
             <input type="text" id="search-bar" placeholder="Search blog posts..." onkeyup="filterBlogs()">
             <ul id="blog-list">
-                <li class="blog-item"><a href="blogs/blog1.html">The Importance of Automated Testing</a></li>
-                <li class="blog-item"><a href="blogs/blog2.html">How to Write Effective Test Cases</a></li>
-                <li class="blog-item"><a href="blogs/blog3.html">Understanding End-to-End Testing</a></li>
+                <li class="blog-item"><a href="blogs/blog1.html">Dummy article: The Importance of Automated Testing</a></li>
+                <li class="blog-item"><a href="blogs/blog2.html">Dummy article: How to Write Effective Test Cases</a></li>
+                <li class="blog-item"><a href="blogs/blog3.html">Dummy article:Understanding End-to-End Testing</a></li>
             </ul>
             <div id="pagination">
                 <button onclick="changePage(-1)">Previous</button>
