--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Understanding End-to-End Testing</h1>
+        <h1>Dummy article: Understanding End-to-End Testing</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about.html">About</a>
