--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>The Importance of Automated Testing</h1>
+        <h1>Dummy article: The Importance of Automated Testing</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about.html">About</a>
