--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>How to Write Effective Test Cases</h1>
+        <h1>Dummy article: How to Write Effective Test Cases</h1>
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about.html">About</a>
