--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,8 @@
     </header>
     <main>
         <section>
-            <h2>Project Zero: A guide to building a powerful test automation framework of any type [playlist of 57 free videos]</h2>
+            <h2>Project Zero: A guide to building a powerful test automation framework of any type.</h2>
+            <h4>[A playlist of 57 free videos]</h4>
             <input type="text" id="search-bar" placeholder="Search tech talks..." onkeyup="filterBlogs()">
             <!-- YouTube video iframe -->
             <iframe width="560" height="315"
@@ -32,8 +33,8 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
 
-            <h2>RestPRO: A guide to building a robust, readable test automation framework for API Automation [playlist of 32 free
-                videos]</h2>
+            <h2>RestPRO: A guide to building a robust, readable test automation framework for API Automation.</h2>
+            <h4>[A playlist of 32 free videos]</h4>
             <input type="text" id="search-bar" placeholder="Search tech talks..." onkeyup="filterBlogs()">
             <!-- YouTube video iframe -->
             <iframe width="560" height="315"
