update videos page

--- a/videos.html
+++ b/videos.html
@@ -22,9 +22,9 @@
     </header>
     <main>
         <section>
-            <h2>Project Zero: A guide to building a powerful test automation framework of any type.</h2>
-            <h4>[A playlist of 57 free videos]</h4>
-            <input type="text" id="search-bar" placeholder="Search tech talks..." onkeyup="filterBlogs()">
+            <h2>Project Zero: A guide to learn how to build core components of a powerful test automation framework.</h2>
+            <h3>[A playlist of 57 free videos]</h3>
+            <h5>[Topics covered: Version Control, Logging, Configuration, Secrets, Annotations, Assertions, Continous Integration, Reporting, Test Monitoring, Alerting, Code Formatting, Pre commit hooks, Building custom Extensions ]</h5>
             <!-- YouTube video iframe -->
             <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/videoseries?si=T01OhV0uN56OmgLB&list=PLNky9jSTCKG3j0WwqMDFOrr3XMlaSsKOY"
@@ -33,9 +33,10 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
 
-            <h2>RestPRO: A guide to building a robust, readable test automation framework for API Automation.</h2>
-            <h4>[A playlist of 32 free videos]</h4>
-            <input type="text" id="search-bar" placeholder="Search tech talks..." onkeyup="filterBlogs()">
+            <h2>RestPRO: A guide to building a robust, readable test automation framework for API Automation using RestAssured.</h2>
+            <h3>[A playlist of 32 free videos]</h3>
+            <h5>[Topics covered: RestAssured Tests, Serialisation and Deserialisation of request and response, Authentication, Setup and Tear Down,
+                Fluent assertions, Schema Assertions, TokenFactory, Using Builder Pattern and Accessor Pattern, Masking sensitive data, Health Checks, and everything else from Project Zero. ]</h5>
             <!-- YouTube video iframe -->
             <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/videoseries?si=Bpo5zYTtWlVBqh9f&list=PLNky9jSTCKG00lCUIMqSMDXnmMfA22VDd"
@@ -43,6 +44,13 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
+
+            <h3>TestWright: A guide to building robust, readable test automation framework for Web Automation using Playwright.</h2>
+            <h3>[A playlist of n... free videos]</h3>
+            <h5>[Topics covered: Writing tests with Playwright, Recommended Design Patterns, Visual testing, Accessibilty testing, Console testing, Network testing, 
+                Integrating tests with CI and CD, Test Fixtures, Test Data fixtures, Page Fixtures ]</h5>
+            <!-- YouTube video iframe -->
+            <p>Coming soon...</p>
         </section>
     </main>
     <footer>
