--- a/videos.html
+++ b/videos.html
@@ -47,7 +47,7 @@
 
             <h3>TestWright: A guide to building robust, readable test automation framework for Web Automation using Playwright.</h2>
             <h3>[A playlist of n... free videos]</h3>
-            <h5>[Topics covered: Writing tests with Playwright, Recommended Design Patterns, Visual testing, Accessibilty testing, Console testing, Network testing, 
+            <h5>[Topics to cover: Writing tests with Playwright, Recommended Design Patterns, Visual testing, Accessibilty testing, Console testing, Network testing, 
                 Integrating tests with CI and CD, Test Fixtures, Test Data fixtures, Page Fixtures ]</h5>
             <!-- YouTube video iframe -->
             <p>Coming soon...</p>
