--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <header>
-        <h1>Dummy article: How to Write Effective Test Cases</h1>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../about.html">About</a>
-            <a href="../contact.html">Contact</a>
-            <a href="../blogs.html">Blog</a>
-        </nav>
-    </header>
+    <div id="header-container"></div>
+    <script>
+        fetch('/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading header:', error));
+    </script>
     <main>
         <article>
             <p>Writing effective test cases is key to successful testing. A good test case should be clear, concise, and
