--- a/videos.html
+++ b/videos.html
@@ -9,17 +9,15 @@
 </head>
 
 <body>
-    <header>
-        <h1>Power Tester</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="blogs.html">Blog</a>
-            <a href="talks.html">Talks</a>
-            <a href="videos.html">YouTube</a>
-        </nav>
-    </header>
+    <div id="header-container"></div>
+    <script>
+        fetch('/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading header:', error));
+    </script>
     <main>
         <section>
             <h2>Project Zero: A guide to learn how to build core components of a powerful test automation framework.</h2>
