--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header-container"></div>
     <script>
-        fetch('/header.html')
+        fetch('header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-container').innerHTML = data;
