--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -12,12 +12,12 @@
     <header data-testid="main-header">
         <h1>Power Tester</h1>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/contact.html">Contact</a>
-            <a href="/blogs.html">Blog</a>
-            <a href="/talks.html">Talks</a>
-            <a href="/videos.html">YouTube</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="blogs.html">Blog</a>
+            <a href="talks.html">Talks</a>
+            <a href="videos.html">YouTube</a>
         </nav>
     </header>
     <main>
