--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header data-testid="main-header">
+    <header>
         <h1>Power Tester</h1>
         <nav>
             <a href="../index.html">Home</a>
