Add image for topic

--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -21,7 +21,10 @@
         </nav>
     </header>
     <main>
-        <h2>The Repository Debate: Where should system or e2e tests live and why the location matters?</h2>
+        <h2>The best decision you can make to get rid of false positives due to expected code changes: Write your e2e tests inside app repository.</h2>
+        <iframe title="E2E Tests Location Diagram" style="width:100%;height:483px;"
+            src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=e2e-tests-location.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fdesign%2Fe2e-tests-location.drawio">
+        </iframe>
         <article>
             <p>Automated testing is a crucial part of modern software development. It allows developers to identify and
                 fix bugs quickly, ensuring a high-quality product. Automated tests save time and reduce manual effort,
