--- a/blogs.html
+++ b/blogs.html
@@ -25,7 +25,7 @@
             <h2>Latest Posts</h2>
             <input type="text" id="search-bar" placeholder="Search blog posts..." onkeyup="filterBlogs()">
             <ul id="blog-list">
-                <li class="blog-item"><a href="blogs/blog1.html">The Repository Debate: Where should system or e2e tests live and why the location matters?</a></li>
+                <li class="blog-item"><a href="blogs/blog1.html">e2e tests location (in or outside app repo?) : The decision that can make or break your automation efforts.</a></li>
                 <li class="blog-item"><a href="blogs/blog2.html">Dummy article: How to Write Effective Test Cases</a></li>
                 <li class="blog-item"><a href="blogs/blog3.html">Dummy article:Understanding End-to-End Testing</a></li>
             </ul>
