--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -79,6 +79,10 @@
                      Which means they dont scale well with QA capacity over time.
                 </li>
             </ol>
+            <h3>Credits</h3>
+            <p>
+                A big credit for this article also goes to @Amuthan Shakthivel. It was after one of our discussions that I thought of experimenting with this approach in our current project, which resulted into all these findings and eventually this article.
+            </p>    
         </article>
     </main>
     <footer>
