--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -81,7 +81,14 @@
             </ol>
             <h3>Credits</h3>
             <p>
-                A big credit for this article also goes to @Amuthan Shakthivel. It was after one of our discussions that I thought of experimenting with this approach in our current project, which resulted into all these findings and eventually this article.
+                I would like to dedicate this article to @Amuthan Shakthivel. It was after one of our discussions that I thought of experimenting with this approach in our current project, which resulted into all these findings and eventually this article.
+            </p>
+            <p>
+                I have tried a similar approach in the past but had to prematuraly gave up on the idea due to infastructure pressure that our DevOps team felt at that moment, because of creating temporary profile environments, for each PR to run all those system tests. 
+                This time it was differnt since our projects DevOps setup was much more optimized and matured but that past experience was still hanging somewhere in my head. 
+            </p>
+            <p>
+                I would not have thought about trying this approach again, if it wasn't for that discussion. So, thank you Amuthan :).
             </p>    
         </article>
     </main>
