--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             <a href="blogs.html">Blog</a>
             <a href="talks.html">Talks</a>
             <a href="videos.html">YouTube</a>
+            <a href="references.html">References</a>
         </nav>
     </header>
     <main data-testid="main">
