--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -18,10 +18,12 @@
             <a href="../blogs.html">Blog</a>
             <a href="../talks.html">Talks</a>
             <a href="../videos.html">YouTube</a>
+            <a href="../references.html">References</a>
         </nav>
     </header>
     <main>
         <h2>The Repository Debate: Where should system or e2e tests live and why the location matters?</h2>
+        <iframe frameborder="0" style="width:100%;height:393px;" src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=e2e-tests-location.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fdesign%2Fe2e-tests-location.drawio"></iframe>æ
         <article>
             <p>Automated testing is a crucial part of modern software development. It allows developers to identify and
                 fix bugs quickly, ensuring a high-quality product. Automated tests save time and reduce manual effort,
