--- a/videos.html
+++ b/videos.html
@@ -18,13 +18,14 @@
             <a href="blogs.html">Blog</a>
             <a href="talks.html">Talks</a>
             <a href="videos.html">YouTube</a>
+            <a href="references.html">References</a>
         </nav>
     </header>
     <main>
         <section>
             <h2>Project Zero: A guide to learn how to build core components of a powerful test automation framework.</h2>
             <h3>[A playlist of 57 free videos]</h3>
-            <h5>[Topics covered: Version Control, Logging, Configuration, Secrets, Annotations, Assertions, Continous Integration, Reporting, Test Monitoring, Alerting, Code Formatting, Pre commit hooks, Building custom Extensions ]</h5>
+            <h5>[Topics covered: Version Control, Logging, Configuration, Secrets, Annotations, Assertions, Continuous Integration, Reporting, Test Monitoring, Alerting, Code Formatting, Pre commit hooks, Building custom Extensions ]</h5>
             <!-- YouTube video iframe -->
             <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/videoseries?si=T01OhV0uN56OmgLB&list=PLNky9jSTCKG3j0WwqMDFOrr3XMlaSsKOY"
