--- a/references.html
+++ b/references.html
@@ -24,9 +24,9 @@
     <main>
         <section>
             <h2>References</h2>
-            <input type="text" id="search-bar" placeholder="Search references..." onkeyup="filterReferences()">
+            <input type="text" id="search-bar" placeholder="Search references..." onkeyup="filterReferences()">          
             <div id="books-section">
-                <h4>Books</h4>
+                <h3>Books</h3>
                 <h5>Read and recommended</h5>
                 <ul id="read-recommended-list">
                     <li class="reference-item"><a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a></li>
@@ -37,16 +37,20 @@
                 <ul id="next-in-line-list">
                     <li class="reference-item"><a href="https://www.amazon.com/Accelerate-Building-Performing-Technology-Organizations/dp/B07BMBYHXL" target="_blank">Accelerate</a></li>
                 </ul>
+            </div>  
+            <div id="articles-section">
+                <h3>Articles</h3>
+                <ul id="articles-list">
+                    <li class="reference-item"><a href="https://trunkbaseddevelopment.com/" target="_blank">Trunk based
+                            development</a>
+                    </li>
+                    <li class="reference-item"><a href="https://continuousdelivery.com/" target="_blank">Continuous Delivery</a>
+                    </li>
+                    <li class="reference-item"><a href="https://martinfowler.com/bliki/BlueGreenDeployment.html" target="_blank">Blue Green Deployments</a></li>
+                    <li class="reference-item"><a href="https://www.infoq.com/presentations/controlled-experiments/" target="_blank">A/B Testing</a></li>
+                    <li class="reference-item">More to be updated...</li>
+                </ul>
             </div>
-            <h3>Articles</h3>
-            <ul id="articles-list">
-                <li class="reference-item"><a href="https://trunkbaseddevelopment.com/" target="_blank">Trunk based development</a></li>
-                <li class="reference-item"><a href="https://continuousdelivery.com/" target="_blank">Continuous Delivery</a></li>
-                <li class="reference-item"><a href="https://martinfowler.com/bliki/BlueGreenDeployment.html" target="_blank">Blue Green Deployments</a></li>
-                <li class="reference-item"><a href="https://www.infoq.com/presentations/controlled-experiments/" target="_blank">A/B Testing</a></li>
-                <li class="reference-item">More to be updated...</li>
-            </ul>
-
             <div id="pagination">
                 <button onclick="changePage(-1)">Previous</button>
                 <span id="page-info"></span>
@@ -56,9 +60,9 @@
         <script>
             // Function to check and hide the books section dynamically
             function checkBooksSection() {
-                const readRecommendedList = document.getElementById('read-recommended-list');
-                const nextInLineList = document.getElementById('next-in-line-list');
                 const booksSection = document.getElementById('books-section');
+                const readRecommendedList = document.getElementById('read-recommended-list');
+                const nextInLineList = document.getElementById('next-in-line-list');      
 
                 // Check if both lists are empty
                 const isReadRecommendedEmpty = Array.from(readRecommendedList.children).every(
@@ -75,6 +79,24 @@
                     booksSection.style.display = 'block'; // Show the block
                 }
             }
+
+            // Function to check and hide the books section dynamically
+                function checkArticlesSection() {
+                    const articlesSection = document.getElementById('articles-section');
+                    const articlesList = document.getElementById('articles-list');
+
+                    // Check if list is empty
+                    const isArticlesListEmpty = Array.from(articlesList.children).every(
+                        (item) => item.style.display === 'none'
+                    );
+
+                    // Hide the articles section if list is empty for the current page
+                    if (isArticlesListEmpty) {
+                        articlesSection.style.display = 'none'; // Hide the block
+                    } else {
+                        articlesSection.style.display = 'block'; // Show the block
+                    }   
+                }
 
             // Call the paginateReferences function on page load
             document.addEventListener('DOMContentLoaded', paginateReferences);
@@ -98,10 +120,11 @@
 
             // Recheck visibility of the books section after filtering
             checkBooksSection();
+            checkArticlesSection();
         }
     </script>
     <script>
-        const referencesPerPage = 5;
+        const referencesPerPage = 8;
         let currentPage = 1;
 
         // Modify paginateReferences to check the books section
@@ -121,8 +144,9 @@
             document.querySelector('#pagination button:nth-child(1)').disabled = currentPage === 1;
             document.querySelector('#pagination button:nth-child(3)').disabled = currentPage === totalPages;
 
-            // Check the books section for the current page
+            // Check the books and articles section for the current page
             checkBooksSection();
+            checkArticlesSection();
         }
 
         function changePage(direction) {
