--- a/talks.html
+++ b/talks.html
@@ -13,11 +13,11 @@
         <h1>Power Tester</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="blogs.html">Blog</a>
-            <a href="talks.html">Talks</a>
             <a href="videos.html">YouTube</a>
+            <a href="community.html">4TestCommunity</a>
+            <a href="contact.html">Contact</a>
+            <a href="blogs.html">Blogs</a>
+            <a href="talks.html">Talks</a>
             <a href="references.html">References</a>
         </nav>
     </header>
