--- a/blogs.html
+++ b/blogs.html
@@ -10,20 +10,20 @@
 
 <body>
     <header data-testid="main-header">
-        <h1>Power Tester</h1>
+        <h1>Power Tester (blogs)</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="videos.html">YouTube</a>
+            <a href="youtube.html">YouTube</a>
             <a href="community.html">4TestCommunity</a>
             <a href="contact.html">Contact</a>
-            <a href="blogs.html">Blogs</a>
             <a href="talks.html">Talks</a>
-            <a href="references.html">References</a>
+            <a href="blogs.html">Blogs</a>
+            <a href="books.html">Books</a>
+            <a href="articles.html">Articles</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Latest Posts</h2>
             <input type="text" id="search-bar" placeholder="Search blog posts..." onkeyup="filterBlogs()">
             <ul id="blog-list">
                 <li class="blog-item"><a href="blogs/blog1.html">e2e tests location (in or outside app repo?) : The decision that can make or break your automation efforts.</a></li>
