--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,16 @@
 
 <body>
     <header data-testid="main-header">
-        <h1>Power Tester</h1>
+        <h1>Power Tester (contact)</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="videos.html">YouTube</a>
+            <a href="youtube.html">YouTube</a>
             <a href="community.html">4TestCommunity</a>
             <a href="contact.html">Contact</a>
-            <a href="blogs.html">Blogs</a>
             <a href="talks.html">Talks</a>
-            <a href="references.html">References</a>
+            <a href="blogs.html">Blogs</a>
+            <a href="books.html">Books</a>
+            <a href="articles.html">Articles</a>
         </nav>
     </header>
     <main>
