--- a/talks.html
+++ b/talks.html
@@ -10,21 +10,22 @@
 
 <body>
     <header data-testid="main-header">
-        <h1>Power Tester</h1>
+        <h1>Power Tester (tech talks)</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="videos.html">YouTube</a>
+            <a href="youtube.html">YouTube</a>
             <a href="community.html">4TestCommunity</a>
             <a href="contact.html">Contact</a>
-            <a href="blogs.html">Blogs</a>
             <a href="talks.html">Talks</a>
-            <a href="references.html">References</a>
+            <a href="blogs.html">Blogs</a>
+            <a href="books.html">Books</a>
+            <a href="articles.html">Articles</a>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Tech Talks: 2024 </h2>
-            <h3>qa-leadership-summit-winter-2024</h3>
+            <h3>Tech Talks 2024 </h3>
+            <h4>qa-leadership-summit-winter-2024</h4>
             <input type="text" id="search-bar" placeholder="Search tech talks..." onkeyup="filterBlogs()">
             <ul id="tech-talk-list">
                 <li class="blog-item"><a href="https://www.browserstack.com/events/qa-leadership-summit-winter-2024">qa-leadership-summit-winter-2024</a></li>
